compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_for_anonymous_function_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1290
expression: "\n/// An example type.\npub type Wibble\n\npub fn main() {\n  fn(w: Wibble) { todo }\n}\n"
---
/// An example type.
pub type Wibble

pub fn main() {
  fn(w: Wibble) { todo }
        ▔▔↑▔▔▔          
}


----- Hover content -----
Scalar(
    String(
        "```rakun\napp.Wibble\n```\n An example type.\n",
    ),
)
