compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_for_pattern_spread_ignoring_all_positional_fields.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 731
expression: "\npub record Model {\n  Model(\n    Int,\n    Float,\n    label1: Int,\n    label2: String,\n  )\n}\n\npub fn main() {\n  case todo {\n    Model(_, _, _, ..) -> todo\n  }\n}\n"
---
pub record Model {
  Model(
    Int,
    Float,
    label1: Int,
    label2: String,
  )
}

pub fn main() {
  case todo {
    Model(_, _, _, ..) -> todo
                   ↑▔         
  }
}


----- Hover content -----
Scalar(
    String(
        "Unused labelled fields:\n- `label2: String`",
    ),
)
