compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_function_arg_annotation_2.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 505
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nfn append(x: String, y: String) -> String {\n  x ++ y\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
fn append(x: String, y: String) -> String {
             ▔▔▔▔↑▔                        
  x ++ y
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.String\n```\n",
    ),
)
