compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_function_definition.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn add_2(x) {\n  x + 2\n}\n"
---
fn add_2(x) {
▔▔▔↑▔▔▔▔▔▔▔  
  x + 2
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn(Int) -> Int\n```\n",
    ),
)
