compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_imported_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 205
expression: "\nimport example_module\nfn main() {\n  example_module.my_fn\n}\n"
---
import example_module
fn main() {
  example_module.my_fn
                ▔▔▔↑▔▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Nil\n```\n",
    ),
)
